# vulkangak

./: .gitattributes  .gitignore  README.md  assets.input  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  compileAssets.bat  compileAssets.py  compileAssets.sh  descriptor_group.cpp  descriptor_group.h  frame.h  image.cpp  index_buffer.cpp  index_buffer.h  main.cpp  mesh.cpp  mesh.h  meson.build  render_device.cpp  render_device.h  shader.cpp  shader.h  simulation_loop.h  typedef.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp
asset_compiler/: main.cpp  meson.build  package.h  package_input.cpp  package_input.h
asset_compiler/include/asset/: asset.h  font.h  image.h  package.h  shader_bytecode.h  shader_program.h  structured_binary.h
asset_compiler/scripts/: compileShaders.py
asset_compiler/src/: asset_types.cpp  asset_types.h  load_file.cpp  load_file.h  main.cpp  package_input.cpp  package_input.h
asset_compiler/src/load/: font.cpp  font.h  image.cpp  image.h  shader_bytecode.cpp  shader_bytecode.h  shader_program.cpp  shader_program.h
shaders/: triangle.frag  triangle.vert
src/: TestGame.h  input.cpp  input.h  log.h  main.cpp  s.json  simulation_loop.cpp  simulation_loop.h  test.h  typedef.h  window.cpp  window.h
src/containers/: defer_delete.cpp  defer_delete.h  pop_back.h  pop_erase.h  thread_safe_queue.h
src/game/: entity.cpp  entity.h  game_interface.h  game_loop.cpp  game_loop.h  input.h  simulation_loop.cpp  simulation_loop.h  simulation_tick.h
src/math/: math.cpp  math.h  multilerp.h  random.cpp  random.h
src/render/: buffer.h  command_buffer.h  descriptor_group.h  font.h  lens.cpp  lens.h  particle_mesh.h  render_device.h  shader.cpp  text.h  uniform_buffer.cpp  vertex_buffer.cpp  vertex_buffer.h  vertex_layout.h  vk_error.h
src/render/backend/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  descriptor_group.cpp  descriptor_group.h  frame_sync.h  image.cpp  image.h  imgui_loop.cpp  imgui_loop.h  index_buffer.cpp  index_buffer.h  render_device.cpp  render_device.h  shader.cpp  shader.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h  vk_error.h
src/render/backend/factory/: buffer_factory.h  command_buffer_factory.h  descriptor_set_factory.h  descriptor_set_layout_factory.h  frame_buffer_factory.h  image_factory.h  image_sampler_factory.h  render_pass_factory.h  shader_factory.h
src/render/backend/factory/platform/: buffer_factory_vulkan.cpp  buffer_factory_vulkan.h  command_buffer_factory_vulkan.cpp  command_buffer_factory_vulkan.h  descriptor_set_factory_vulkan.cpp  descriptor_set_factory_vulkan.h  descriptor_set_layout_factory_vulkan.cpp  descriptor_set_layout_factory_vulkan.h  frame_buffer_factory_vulkan.cpp  frame_buffer_factory_vulkan.h  image_factory_vulkan.cpp  image_factory_vulkan.h  image_sampler_factory_vulkan.cpp  image_sampler_factory_vulkan.h  render_pass_factory_vulkan.cpp  render_pass_factory_vulkan.h  shader_factory_vulkan.cpp  shader_factory_vulkan.h
src/render/backend/type/: buffer.h  command_buffer.h  descriptor_set.h  descriptor_set_layout.h  frame_buffer.h  image.h  image_sampler.h  mysettings.h  render_pass.h  shader.h
src/render/backend/type/platform/: buffer_vulkan.cpp  buffer_vulkan.h  command_buffer_vulkan.cpp  command_buffer_vulkan.h  descriptor_set_layout_vulkan.h  descriptor_set_vulkan.cpp  descriptor_set_vulkan.h  frame_buffer_vulkan.h  image_sampler_vulkan.h  image_vulkan.h  render_pass_vulkan.h  shader_vulkan.h  translation_vulkan.cpp  translation_vulkan.h  vk_error.h
src/render/line/: line_mesh.cpp  line_mesh.h
src/render/particle/: particle_mesh.cpp  particle_mesh.h  particle_shader.h
src/render/sprite/: sprite_mesh.cpp  sprite_mesh.h
src/render/text/: font.h  text_mesh.cpp  text_mesh.h
src_assets/shaders/: test.shader  triangle.frag  triangle.vert
src_assets/shaders/line/: line.frag  line.vert
src_assets/shaders/particle/: particle.frag  particle.vert
src_assets/shaders/sprite/: sprite.frag  sprite.vert  sprite_circle.frag
src_assets/shaders/text_msdf/: text_msdf.frag  text_msdf.vert
src_common/: print.h
subprojects/: imgui.wrap
subprojects/packagefiles/imgui/: imgui_srgb.patch
subprojects/packagefiles/imgui_srgb/: gen_patch.sh  imgui_impl_vulkan.cpp  imgui_srgb.patch
unsure/: render_pass.cpp  render_pass.h
